--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -18,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fix": "eslint \"**/*.{js,jsx}\" --fix && stylelint \"**/*.{css,scss}\" --fix"
+    "fix": "eslint \"**/*.{js,jsx}\" --fix && stylelint \"**/*.{css,scss}\" --fix",
+    "lint": "eslint \"**/*.{js,jsx}\" --fix"
   },
   "eslintConfig": {
     "extends": [
